objects/OperationHistoryAmount__c.object
<CustomObject>
    <fields>
        <fullName>AgingCode__c</fullName>
        <label>経年劣化コード</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgingCoefficient__c</fullName>
        <label>経年劣化係数</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BasicFee__c</fullName>
        <label>基本料</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BillingCode__c</fullName>
        <label>請求先コード</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingName__c</fullName>
        <label>請求先名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingNo__c</fullName>
        <label>請求番号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingSupplementalInformation__c</fullName>
        <label>請求先補足情報</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallCenterReceptionNumber__c</fullName>
        <label>コールセンター受付番号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorrespondingNumber__c</fullName>
        <label>対応番号</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreateDateTime__c</fullName>
        <label>登録日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreateUserCode__c</fullName>
        <label>登録者コード</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DispatchFeeHoliday_Amount__c</fullName>
        <label>派遣料休日・金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DispatchFeeHoliday_Time__c</fullName>
        <label>派遣料休日・時間</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DispatchFeeHoliday_UnitPrice__c</fullName>
        <label>派遣料休日・単価</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DispatchFeeWeekday_Amount__c</fullName>
        <label>派遣料平日・金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DispatchFeeWeekday_Time__c</fullName>
        <label>派遣料平日・時間</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DispatchFeeWeekday_UnitPrice__c</fullName>
        <label>派遣料平日・単価</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DispatchFeeWeekdaysOutside_Amount__c</fullName>
        <label>派遣料平日外・金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DispatchFeeWeekdaysOutside_Time__c</fullName>
        <label>派遣料平日外・時間</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DispatchFeeWeekdaysOutside_UnitPrice__c</fullName>
        <label>派遣料平日外・単価</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FreeInput0_Amount__c</fullName>
        <label>自由入力０・金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FreeInput0_Name__c</fullName>
        <label>自由入力０・名称</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FreeInput0_Quantity__c</fullName>
        <label>自由入力０・数量</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FreeInput0_UnitPrice__c</fullName>
        <label>自由入力０・単価</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FreeInput1_Amount__c</fullName>
        <label>自由入力１・金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FreeInput1_Name__c</fullName>
        <label>自由入力１・名称</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FreeInput1_Quantity__c</fullName>
        <label>自由入力１・数量</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FreeInput1_UnitPrice__c</fullName>
        <label>自由入力１・単価</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FreeInput2_Amount__c</fullName>
        <label>自由入力２・金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FreeInput2_Name__c</fullName>
        <label>自由入力２・名称</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FreeInput2_Quantity__c</fullName>
        <label>自由入力２・数量</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FreeInput2_UnitPrice__c</fullName>
        <label>自由入力２・単価</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interaction__c</fullName>
        <label>対応区分</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LinkKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>連携キー</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MaintenanceContractTimesDenominator__c</fullName>
        <label>保守契約回数分母</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaintenanceContractTimes__c</fullName>
        <label>保守契約回数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaintenanceContract__c</fullName>
        <label>保守契約</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>備考</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OperationHistory__c</fullName>
        <label>対応履歴</label>
        <referenceTo>OperationHistory__c</referenceTo>
        <relationshipLabel>金額欄</relationshipLabel>
        <relationshipName>OperationHistoryAmount</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OrderNo1__c</fullName>
        <label>注文番号１</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNo2__c</fullName>
        <label>注文番号2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overhead__c</fullName>
        <label>諸経費</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PartsFee__c</fullName>
        <label>部品代</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductNumber__c</fullName>
        <label>製番</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuotationNo2__c</fullName>
        <label>見積番号２</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteNo1QuotationNo1__c</fullName>
        <label>見積番号１</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>ランク</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOrderNo__c</fullName>
        <label>販売オーダー番号</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubTotalAmount__c</fullName>
        <label>小計</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TaxAmount__c</fullName>
        <label>消費税</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TaxRate__c</fullName>
        <label>消費税率</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TechnicalFeeHoliday_Amount__c</fullName>
        <label>技術料休日・金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TechnicalFeeHoliday_Time__c</fullName>
        <label>技術料休日・時間</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TechnicalFeeHoliday_UnitPrice__c</fullName>
        <label>技術料休日・単価</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TechnicalFeeWeekday_Time__c</fullName>
        <label>技術料平日・時間</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TechnicalFeeWeekday_UnitPrice__c</fullName>
        <label>技術料平日・単価</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TechnicalFeeWeekdaysOutside_Amount__c</fullName>
        <label>技術料平日外・金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TechnicalFeeWeekdaysOutside_Time__c</fullName>
        <label>技術料平日外・時間</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TechnicalFeeWeekdaysOutside_UnitPrice__c</fullName>
        <label>技術料平日外・単価</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <label>合計金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnearnedNo1__c</fullName>
        <label>前受番号１</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnearnedNo2__c</fullName>
        <label>前受番号2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdateDateTime__c</fullName>
        <label>更新日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UpdateUserCode__c</fullName>
        <label>更新者コード</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WeekdayTechnicalFeeAmount__c</fullName>
        <label>技術料平日・金額</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <label>金額欄</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CallCenterReceptionNumber__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CallCenterReceptionNumber__c</field>
            <operation>equals</operation>
            <value>16-1011-0137</value>
        </filters>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>金額欄 Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>